# Medical-ChatBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPROVEMENT_PLAN.md  LICENSE  OAUTH_SETUP.md  PORTFOLIO.md  README.md  app.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  requirements_simplified.txt  run_dev.py  setup.py  store_index.py  template.py  test_api.py  test_components.py  test_inference.py  test_models.py  test_simple.py
.github/workflows/: ci.yml  eval-nightly.yml
app/: main.py
app/agent/: medical_agent.py
app/agent/tools/: __init__.py  internal_kb.py  openfda.py  pubmed.py  rxnorm.py
app/api/v1/: api.py
app/api/v1/endpoints/: agent.py  auth.py  chat.py  documents.py  health.py
app/clients/: rxnorm.py
app/core/: cache.py  config.py  exceptions.py  logging.py  observability.py  security.py
app/db/: database.py  models.py  pinecone.py
app/models/: __init__.py  auth.py  chat.py  common.py  document.py
app/repositories/: __init__.py  base.py  chat.py  document.py  user.py
app/services/: auth.py  chat.py  chat_groq.py  chat_simple.py  document.py  embeddings.py  hybrid_search.py  query_processor.py  reranker.py  safety.py
app/utils/: pdf.py  text.py
docs/: deploy.md
docs/screenshots/: README.md
eval/: README.md
eval/dataset/: medical_qa_eval_smoke.jsonl  seed_pubmedqa.py
eval/runners/: _common.py  _retrievers.py  agent_runner.py  embedding_compare.py  ragas_runner.py  retrieval_runner.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/css/: styles.css
frontend/js/: app.js
frontend/src/: App.enhanced.tsx  App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/chat/: ChatInterface.tsx  MessageBubble.tsx  MessageInput.tsx
frontend/src/components/common/: ErrorBoundary.tsx  Loading.tsx
frontend/src/components/documents/: DocumentDetail.tsx  DocumentList.tsx
frontend/src/components/layout/: Header.tsx  MainHeader.tsx  Sidebar.tsx
frontend/src/components/profile/: UserProfile.tsx
frontend/src/components/settings/: Settings.tsx
frontend/src/components/ui/: blur-fade.tsx  dialog.tsx  dropdown-menu.tsx  typing-animation.tsx
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx
frontend/src/hooks/: useApi.ts  useChat.ts  useChatApi.ts  useDocumentApi.ts
frontend/src/pages/: AuthCallback.tsx  DocumentsPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts  apiClient.ts  websocket.ts
frontend/src/types/: api.types.ts  index.ts
src/: prompt.py
templates/: chat.html
tests/: conftest.py
tests/eval/: test_rag_quality.py
tests/unit/: test_hybrid_search.py  test_observability.py  test_query_processor.py  test_reranker.py  test_rxnorm.py  test_safety.py
(+1 files in other folders)
